Circle Select tool: status bar info doesn't match with the actual operations #89909

Closed
opened 2021-07-17 05:08:19 +02:00 by Narayan Aras · 10 comments

System Information
Operating system: Windows-10-10.0.19041-SP0 64 Bits
Graphics card: Intel(R) UHD Graphics 620 Intel 4.5.0 - Build 25.20.100.6444

Blender Version
Broken: version: 3.0.0 Alpha, branch: master, commit date: 2021-06-23 22:10, hash: f7fbb518c8
Worked: NA

Short description of error

The "Select circle" command is riddled with problems:

Issue 1

When we choose the "Circle Select" tool, the status line does not provide the relevant information at all.
image.png

  • There is no information about how to change the diameter of the circle
  • The status line shows that "LMB+drag" moves the item, which is completely erroneous.

Once we press the LMB down, the status line changes to-
image.png

Issue 2
Even this is totally faulty:

  • There is no difference between ESC (Cancel) and ENTER (confirm). The selection remains in both cases.
  • The WhUp increases the diameter of the circle. It does NOT "add" anything to the selection.
  • The WhDown decreases the diameter of the circle. It does NOT "Subtract" anything from the selection.
  • The meaning of "MSPan" is not clear at all. I could not find its meaning on the whole Internet!
  • The SHIFT+LMB does NOT deselect an object (or toggle its selection). In fact, there is no way to deselect any object at all!
  • The role of RMB (to cancel) is not listed at all.

I found experimentally that when we roll the mouse wheel while the LMB is pressed down, the diameter changes.

Issue 3
At this time, the mouse shows two different circles simultaneously: The new circle is in dotted line. The default circle is in solid line. Showing two circles at a time is totally unnecessary, and does not serve any purpose.

Even in the light of this decoded behavior, I cannot guess what "MsPan" means!

Exact steps for others to reproduce the error
See above

Suggested solutions:

  • Correct the status line to show the correct hints
  • In the sculpting brushes, the diameter can be adjusted by pressing F and then dragging the mouse. Use the same method here too, and have consistency!
  • Please provide a way to deselect items.
**System Information** Operating system: Windows-10-10.0.19041-SP0 64 Bits Graphics card: Intel(R) UHD Graphics 620 Intel 4.5.0 - Build 25.20.100.6444 **Blender Version** Broken: version: 3.0.0 Alpha, branch: master, commit date: 2021-06-23 22:10, hash: `f7fbb518c8` Worked: NA **Short description of error** The "Select circle" command is riddled with problems: **Issue 1** When we choose the "Circle Select" tool, the status line does not provide the relevant information at all. ![image.png](https://archive.blender.org/developer/F10226293/image.png) - There is no information about how to change the diameter of the circle - The status line shows that "LMB+drag" moves the item, which is completely erroneous. Once we press the LMB down, the status line changes to- ![image.png](https://archive.blender.org/developer/F10226295/image.png) **Issue 2** Even this is totally faulty: - There is no difference between ESC (Cancel) and ENTER (confirm). The selection remains in both cases. - The WhUp increases the diameter of the circle. It does NOT "add" anything to the selection. - The WhDown decreases the diameter of the circle. It does NOT "Subtract" anything from the selection. - The meaning of "MSPan" is not clear at all. I could not find its meaning on the whole Internet! - The SHIFT+LMB does NOT deselect an object (or toggle its selection). In fact, there is no way to deselect any object at all! - The role of RMB (to cancel) is not listed at all. I found experimentally that when we roll the mouse wheel while the LMB is pressed down, the diameter changes. **Issue 3** At this time, the mouse shows two different circles simultaneously: The new circle is in dotted line. The default circle is in solid line. Showing two circles at a time is totally unnecessary, and does not serve any purpose. Even in the light of this decoded behavior, I cannot guess what "MsPan" means! **Exact steps for others to reproduce the error** See above **Suggested solutions:** - Correct the status line to show the correct hints - In the sculpting brushes, the diameter can be adjusted by pressing F and then dragging the mouse. Use the same method here too, and have consistency! - Please provide a way to deselect items.
Author

Added subscriber: @raindrops

Added subscriber: @raindrops

#98084 was marked as duplicate of this issue

#98084 was marked as duplicate of this issue
Member

Added subscriber: @PratikPB2123

Added subscriber: @PratikPB2123
Member

Changed status from 'Needs Triage' to: 'Needs Developer To Reproduce'

Changed status from 'Needs Triage' to: 'Needs Developer To Reproduce'
Member

Bug 3,4: At this time, the mouse shows two different circles simultaneously...As soon as the LMB is released, the diameter reverts to the default value.

Similar report is present on tracker: #83394 (Tool shelf circle select. Changing the brush radius by hotkey does not update the radius)
(I will remove it from description)


The SHIFT+LMB does NOT deselect an object (or toggle its selection). In fact, there is no way to deselect any object at all!

Please check again with factory settings (File -> defaults -> Load Factory settings). Can deselect here in both ways (MMB Shift + LMB).


Choosing select circle option from toolbar and pressing the LMB shows the different info. This looks inconsistent.
Agree with some changes mentioned in the report. #user_interface developers will take the final decision.

Adding multiple issues in single report is not really good but all the changes looks useful and almost same so it's better to keep them together.

>Bug 3,4: At this time, the mouse shows two different circles simultaneously...As soon as the LMB is released, the diameter reverts to the default value. Similar report is present on tracker: #83394 (Tool shelf circle select. Changing the brush radius by hotkey does not update the radius) (I will remove it from description) --- >The SHIFT+LMB does NOT deselect an object (or toggle its selection). In fact, there is no way to deselect any object at all! Please check again with factory settings (`File -> defaults -> Load Factory settings`). Can deselect here in both ways (`MMB` `Shift + LMB`). --- Choosing `select circle` option from toolbar and pressing the LMB shows the different info. This looks inconsistent. Agree with some changes mentioned in the report. #user_interface developers will take the final decision. Adding multiple issues in single report is not really good but all the changes looks useful and almost same so it's better to keep them together.
Pratik Borhade changed title from The Circle Select tool is not intuitive; and the status line hints do not match its behavior to Circle Select tool: insufficient information on status bar. 2021-07-17 12:11:31 +02:00
Author

I reverted to factory settings. I can deselect objects with CTRL+LMB, but not with SHFT+LMB or SHFT+MMB or MMB.

Another problem is that usually such hotkeys toggle the selection status of an individual object.
(This is a convenient way to add/remove an objection to the selection.)
But CTRL+LMB only deselects: It cannot select the object! This also can be considered a bug.

I confirmed this by repeating the entire cycle twice.

I reverted to factory settings. I can deselect objects with CTRL+LMB, but not with SHFT+LMB or SHFT+MMB or MMB. Another problem is that usually such hotkeys toggle the selection status of an individual object. (This is a convenient way to add/remove an objection to the selection.) But CTRL+LMB only deselects: It cannot select the object! This also can be considered a bug. I confirmed this by repeating the entire cycle twice.
Author

BTW the problem is not only about wrong information in the status line: It is also about multiple affordances that are wrong.

It is also about not using a well-set convention that exists in Blender itself.
For example, why don't we press the F key and then drag the mouse to set the size of the circle (as in sculpt brush)?

BTW the problem is not only about wrong information in the status line: It is also about multiple affordances that are wrong. It is also about not using a well-set convention that exists in Blender itself. For example, why don't we press the F key and then drag the mouse to set the size of the circle (as in sculpt brush)?
Member

Added subscriber: @blendask

Added subscriber: @blendask
Pratik Borhade changed title from Circle Select tool: insufficient information on status bar. to Circle Select tool: status bas info doesn't match with the actual operations 2022-05-13 06:54:11 +02:00
Pratik Borhade changed title from Circle Select tool: status bas info doesn't match with the actual operations to Circle Select tool: status bar info doesn't match with the actual operations 2022-05-13 06:54:19 +02:00

This issue was referenced by 113b8030ce

This issue was referenced by 113b8030ced92c23e33717dac97287f8792fd1cb

Changed status from 'Needs Developer To Reproduce' to: 'Resolved'

Changed status from 'Needs Developer To Reproduce' to: 'Resolved'
Campbell Barton self-assigned this 2022-05-13 08:13:50 +02:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#89909
No description provided.