Fix T89909: Circle Select tool status bar doesn't match the operations

Assign get_name functions for select picking and circle select
so modifier keys show the result of holding the modifiers.